--- a/src/modules/tic-tac-toe/assets/style/index.css
+++ b/src/modules/tic-tac-toe/assets/style/index.css
@@ -1,3 +1,18 @@
-.tictactoe {
+.container {
+	/* display: flex; */
+}
+
+.form {
+	margin-bottom: 20px;
 	display: flex;
+	align-items: center;
+}
+
+.form label {
+	margin-right: 10px;
+	font-size: 18px;
+}
+
+.form .toggle {
+	margin-left: 20px;
 }
