--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 body {
-	font: 14px 'Century Gothic', Futura, sans-serif;
-	margin: 20px;
-
+	margin: 0;
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
+		'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 }
@@ -10,7 +10,7 @@ code {
 	font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
 
-ol,
-ul {
-	padding-left: 30px;
+a {
+	color: inherit;
+	text-decoration: none;
 }
