--- a/src/modules/btcn04_registration/pages/MWelcome/style.css
+++ b/src/modules/btcn04_registration/pages/MWelcome/style.css
@@ -33,6 +33,24 @@
 	transition: 0.1s ease-in;
 	background-color: #2375f8;
 }
+
+.registration__body .welcome svg {
+	margin-left: 0.5rem;
+	margin-top: 0.5rem;
+	animation: ping 1s cubic-bezier(0, 0, 0.2, 1) infinite;
+
+	width: 1.25rem;
+	height: 1.25rem;
+}
+
+@keyframes ping {
+	75%,
+	100% {
+		transform: scale(2);
+		opacity: 0;
+	}
+}
+
 .registration__btn {
 	display: flex;
 	justify-content: center;
