--- a/src/common/components/CRegister/style.css
+++ b/src/common/components/CRegister/style.css
@@ -80,20 +80,8 @@
 	align-items: center;
 }
 
-.register__loading svg {
+.register__loading div {
 	margin-top: 0.5rem;
-	animation: ping 1s cubic-bezier(0, 0, 0.2, 1) infinite;
-
-	width: 1.25rem;
-	height: 1.25rem;
-}
-
-@keyframes ping {
-	75%,
-	100% {
-		transform: scale(2);
-		opacity: 0;
-	}
 }
 
 .btn__register {
