--- a/src/modules/btcn05_libraries/components/MUserItem/style.css
+++ b/src/modules/btcn05_libraries/components/MUserItem/style.css
@@ -21,7 +21,7 @@ tr.row:hover {
 	top: 0;
 	height: 36px;
 	width: 100px;
-	background-color: #f2f2f2;
+	/* background-color: #f2f2f2; */
 	display: flex;
 	justify-content: center;
 	align-items: center;
